# 2048

./: 2048  CMakeLists.txt  Makefile  README.md  main  make.sh  run.sh
lib/: 2048.hpp  app.hpp  cell.hpp  event.hpp  g2048.hpp  surface.hpp  texture.hpp  vect2d.hpp  window.hpp
src/: 2048.cpp  app.cpp  event.cpp  g2048.cpp  main.cpp  surface.cpp  texture.cpp  vect2d.cpp  window.cpp
